--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="logo">
+            <p>Listen.</p>
+        </div>
         <p class="name">Fireboy DML</p>
         <p class="title">Iseoluwa</p>
 
